--- a/envoy-static.yaml
+++ b/envoy-static.yaml
@@ -30,7 +30,13 @@ static_resources:
                 route:
                   host_rewrite_literal: www.envoyproxy.io
                   cluster: service_envoyproxy_io
-
+         tls_context:
+            common_tls_context:
+              tls_certificates:
+                - certificate_chain:
+                    filename: "/etc/envoy/certs/example-com.crt"
+                  private_key:
+                    filename: "/etc/envoy/certs/example-com.key"
   clusters:
   - name: service_envoyproxy_io
     connect_timeout: 30s
