--- a/envoy-static-https.yaml
+++ b/envoy-static-https.yaml
@@ -44,6 +44,14 @@ static_resources:
                 route:
                   host_rewrite_literal: www.envoyproxy.io
                   cluster: service_envoyproxy_io
+               - match:
+                  prefix: "/service/1"
+                route:
+                  cluster: service1
+              - match:
+                  prefix: "/service/2"
+                route:
+                  cluster: service2
           http_filters:
           - name: envoy.router
             config: {}
