--- a/envoy-static.yaml
+++ b/envoy-static.yaml
@@ -37,9 +37,9 @@ static_resources:
           common_tls_context:
             tls_certificates:
             - certificate_chain:
-                filename: "/etc/envoy/certs/example-com.crt"
+                filename: "/certs/example-com.crt"
               private_key:
-                filename: "/etc/envoy/certs/example-com.key"    
+                filename: "/certs/example-com.key"    
   clusters:
   - name: service_envoyproxy_io
     connect_timeout: 30s
